# bq2515x

./: Cargo.toml  README.md  build.rs
examples/nrf52840-embassy/: Cargo.toml  README.md
src/: hl.rs  lib.rs  ll.rs  ll.yaml  prelude.rs
src/hl/: lowpower.rs
