[package]
name = "bq2515x"
version = "0.1.0"
edition = "2021"

[dependencies]
device-driver = {git = "https://github.com/diondokter/device-driver.git", rev = "397ce01"}
device-driver-macros = {git = "https://github.com/diondokter/device-driver.git", rev = "397ce01", features = ["yaml"]}

embedded-hal = "1.0"
embedded-hal-async = "1.0"

num_enum = { version = "0.7", default-features = false }
bitvec = { version = "1.0", default-features = false }
derive_more = { version = "1.0", features = ["from", "into"], default-features = false }

defmt = { version = "0.3", optional = true }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]